--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "lit-element-vite-storybook",
   "version": "0.0.1",
+  "description": "Lit element library",
+  "author": "fentos",
   "type": "module",
   "main": "dist/my-element.es.js",
   "exports": {
@@ -28,8 +30,33 @@
     "@storybook/builder-vite": "^0.2.4",
     "@storybook/web-components": "^6.5.12",
     "babel-loader": "^8.2.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "lit-html": "^2.4.0",
+    "prettier": "^2.4.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
+  },
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "extends": [
+      "@open-wc",
+      "prettier"
+    ],
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "error"
+      ],
+      "import/no-unresolved": "off",
+      "import/extensions": "off",
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": [
+        "error"
+      ]
+    }
   }
 }
